// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IUCNClassification renders correctly with classification details 1`] = `
<DocumentFragment>
  <div
    class="MuiToolbar-root MuiToolbar-regular"
    style="justify-content: space-between;"
  >
    <h3
      class="MuiTypography-root MuiTypography-h3 MuiTypography-colorInherit"
    >
      IUCN Conservation Actions Classification
    </h3>
    <div
      class="MuiBox-root MuiBox-root-7"
    >
      <button
        aria-label="Edit IUCN Classifications"
        class="MuiButtonBase-root MuiButton-root MuiButton-text sectionHeaderButton MuiButton-textPrimary"
        data-testid="h3-button-toolbar-Edit"
        id="h3-button-toolbar-Edit"
        tabindex="0"
        title="Edit IUCN Classifications"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              role="presentation"
              style="width: 1.3125rem; height: 1.3125rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          <strong>
            Edit
          </strong>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <hr
    class="MuiDivider-root MuiBox-root MuiBox-root-8"
  />
  <ul
    class="MuiList-root"
  >
    <li
      class="MuiListItem-root makeStyles-iucnListItem-6 MuiListItem-divider"
    >
      <p
        class="MuiTypography-root MuiTypography-body2"
      >
        classification 
        <span>
          &gt;
        </span>
         sub classification 1 
        <span>
          &gt;
        </span>
         sub classification 2
      </p>
    </li>
    <li
      class="MuiListItem-root makeStyles-iucnListItem-6 MuiListItem-divider"
    >
      <p
        class="MuiTypography-root MuiTypography-body2"
      >
        classification again 
        <span>
          &gt;
        </span>
         sub classification 1 again 
        <span>
          &gt;
        </span>
         sub classification 2 again
      </p>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`IUCNClassification renders correctly with no classification details 1`] = `
<DocumentFragment>
  <div
    class="MuiToolbar-root MuiToolbar-regular"
    style="justify-content: space-between;"
  >
    <h3
      class="MuiTypography-root MuiTypography-h3 MuiTypography-colorInherit"
    >
      IUCN Conservation Actions Classification
    </h3>
    <div
      class="MuiBox-root MuiBox-root-2"
    >
      <button
        aria-label="Edit IUCN Classifications"
        class="MuiButtonBase-root MuiButton-root MuiButton-text sectionHeaderButton MuiButton-textPrimary"
        data-testid="h3-button-toolbar-Edit"
        id="h3-button-toolbar-Edit"
        tabindex="0"
        title="Edit IUCN Classifications"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              role="presentation"
              style="width: 1.3125rem; height: 1.3125rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          <strong>
            Edit
          </strong>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <hr
    class="MuiDivider-root MuiBox-root MuiBox-root-3"
  />
  <ul
    class="MuiBox-root MuiBox-root-4 listNoBullets"
  >
    <li
      class="MuiBox-root MuiBox-root-5 makeStyles-iucnListItem-1"
    >
      <dd
        class="MuiTypography-root MuiTypography-body1"
      >
        No IUCN Classifications
      </dd>
    </li>
  </ul>
</DocumentFragment>
`;
